--- a/hw-7-t2/src/index.css
+++ b/hw-7-t2/src/index.css
@@ -5,9 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: space-around;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input {
+  width: 500px;
+}
+
+.btn {
+  width: 500px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.container {
+  padding-top: 50px;
+  width: 500px;
 }
